[project]
name = "tmux-export"
version = "0.1.5"
description = "Capture and export tmux pane content as txt/tty/html"
requires-python = ">=3.10"
dependencies = ["ansi2html"]

[project.scripts]
tmux-export = "tmux_export.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tmux_export"]
